--- a/tex/rechnung-vorlage.tex
+++ b/tex/rechnung-vorlage.tex
@@ -24,7 +24,7 @@
   \ProjectTitle{Rechnung}
   \input{/home/pv/tkoffice/tex/invitems.tex}
   \end{invoice}
-  \closing{Besten Dank für den geschätzten Auftrag! \\\\ Zahlung an: \bank}
+  \closing{Besten Dank für den geschätzten Auftrag! \\\\ Zahlung an: \myBank}
   \end{letter}
   \end{document}
   
