--- a/tex/rechnung-vorlage.tex
+++ b/tex/rechnung-vorlage.tex
@@ -19,7 +19,7 @@
   \begin{document}
   \begin{letter}{\custAdr}
   \date{\location, \today}
-  \opening{Rechnung Nr. \quad \invNo \\ Ihre Referenz: \quad \ref \\ Auftragsdatum: \quad \dat \\ \bf{Zahlungsfrist: \quad \cond}}
+  \opening{Rechnung Nr. \quad \invNo \\ Ihre Referenz: \quad \referenz \\ Auftragsdatum: \quad \dat \\ \bf{Zahlungsfrist: \quad \cond}}
   \begin{invoice}{\currency}{\vat}
   \ProjectTitle{Rechnung}
   \input{/home/pv/tkoffice/tex/invitems.tex}
